@@ -1,2 +1,1 @@
-DIST mpv-0_p20121201.tar.xz 1322052 SHA256 2335f8cbf06edd6eb54c74e1e3167cd4d2e6682575b754a94c3b4d6490ca1667 SHA512 bd2ee6065a132ed6d3daff58b17ed752af939a3bb7836d5327e9cf80c6ffe91aa031663a4e05939b3dcf713b2855fa84e6bade0f4dd5535ad53489c4c865fcb9 WHIRLPOOL c4e070d2767cd55f8ad1a280b4d04cae2c8bf12b359651d67258cf6f6a1b3ce41c380aa99160c832ae198cb460f955a732101e8f988bb12ce0994c15c5b82d01
-DIST mpv-0_p20130112.tar.xz 1324208 SHA256 c928b9b60531c05937f0eb2b8d797b277fc46a0f3eccb3ad04e5020821393d07 SHA512 291c7347861eb0827564490ef9cd0c4d40d7ac05a5848c4823c25cb4995e6dbb0adeee99fc3b17092ecb903bc035e83033ee58899ebbef75e079a8b229908a7b WHIRLPOOL acf56d1450d2da87d7308766b96a19ee5712a23b234366b6d24716370950dc28de729a4d41501936c3e8566976e80b478cc6ba161ccf5f6ac37a864440e803a8
+DIST mpv-0_p20130615.tar.xz 1305588 SHA256 161e78584ff70460ecaa01e30eba666c58b26249f66e7521f1828dbcebe71c0e SHA512 b02f7d67375d412404d8b639c7a3a7ee6537b1a6e367a836a4ecd986d03e49dabfacc167a7e8bd1a1c5df3f2f98153b0d8c3404ad7ddde2bfc501dd938c62684 WHIRLPOOL 4771e29dba043048a2f59fa04ae09f61156b81429258b8af292894c133dbcb20921f56e5af88e9fcae09686dc7dfffad958e8130c8724e48659f8564f73bfabd
